# reon-pocket-py

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PROTOCOL.md
reon/: __init__.py  cli.py  client.py  pair.py  protocol.py  storage.py
tools/: parse_btsnoop.py
